# kube-verdict

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  config.py  demo-decision-thresholds.srt  docker-compose.yml  kubewhisperer.db  main.py  mcp_server.py  openapi_tools.json  pyproject.toml  pytest.ini  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CONTRIBUTORS_CLEANUP.md
.github/workflows/: ci.yml  dashboard.yml  release.yml
api/: app.py  auth.py  models.py  oidc.py  sample_journey.py  secrets.py  session_store.py  tools_schema.json  verdict_contract.py  webhook_mapper.py
api/routes/: health.py  investigate.py  sessions.py  webhook.py
cases/: CONTRIBUTING.md
cases/001_crashloopbackoff/: expect.json  input.json
cases/002_imagepullbackoff/: expect.json  input.json
cases/003_oomkilled/: expect.json  input.json
cases/004_pending_pvc/: expect.json  input.json
dashboard/: index.html  package-lock.json  package.json  vite.config.js
decision/: decision_engine.py  models.py  policy_gate.py
dedup/: __init__.py  bfs.py  jaccard.py  tfidf.py
demo/: .env.demo.example  alertmanager_payload.json  cleanup.sh  cli_demo.py  cluster_demo.tape  cluster_setup.sh  demo.tape  demo_webhook.py  healthy_check.tape  init.sh  k3d_init.sh  kap_record.sh  kap_record_ui.sh  portforward.sh  record_demo.sh  run_cli_demo.sh  run_demo.sh  run_rca.py  scenario_builder.py  setup.sh  setup_observability.sh  ui_demo.py
docs/: anchor-by-render.md  api.md  architecture.md  configuration.md  dashboard.md  demo-recording-runbook.md  demo-voiceover-90s-tts.txt  demo-voiceover-90s.md  demo.md  deployment.md  idp-contract.md  pr-mr-first.md  project-layout.md  roadmap.md  test-cases.md  ui.md
ingestion/: __init__.py  anchor_engine.py  chart_parser.py  git_provider.py  gitops_collector.py  helm_collector.py  helm_drift.py  helmfile_collector.py  k8s_collector.py  k8s_schema.py  loki_source.py  manifest_differ.py  manifest_renderer.py  metrics_server_collector.py  otel_backend.py  otel_collector.py  otlp_receiver.py  policy_collector.py  prometheus_collector.py
k8s/: kubeverdict.yaml  kubewhisperer.yaml  ollama.yaml  rbac.yaml
knowledge/: __init__.py  chart_indexer.py  chart_store.py  doc_indexer.py  doc_store.py  example_store.py
llm/: __init__.py  anthropic_client.py  base.py  demo_client.py  google_client.py  groq_client.py  ollama_client.py  openai_client.py
models/: __init__.py  decision.py  incident_report.py  patch_safety.py
ontology/: __init__.py  discovery.py  dynamic_entity.py  entities.py  gen_config.yaml  generated_entities.py  graph.py  relationships.py  version.py
persistence/: __init__.py  db.py  session_repo.py  vector_store_repo.py
rca/: __init__.py  analyzer.py  confidence.py  context_builder.py  remediation_engine.py
reasoning/: beam_search.py  monte_carlo.py  template_catalog.py
remediation/: blast_radius.py
scripts/: build_demo_movie.sh  init-k3s.sh
services/: investigation_service.py
signals/: __init__.py  analyzer.py  patchtst_detector.py  prometheus_source.py
tests/: conftest.py
tools/: b13_capture.py  capture_demo_clips.py  case_contract.py  finalize_demo.py  firefox_webdriver.py  gen_entities.py  gen_openapi_tools.py  recalibrate_cases.py  render_demo_video.py  roadmap.py  score.py
ui/: app.py
vectorstore/: __init__.py  bm25_retriever.py  embedder.py  rrf.py  store.py
workflow/: __init__.py  graph.py  nodes.py  state.py
(+325 files in other folders)
